# hello_opengl

./: CMakeLists.txt  CMakeSettings.json  README.md
hello_opengl/: CMakeLists.txt  camera.cpp  camera.h  hello_opengl.cpp  hello_opengl.h
hello_opengl/resources/: color.frag  lamp1.frag  phong.frag  phong.vert  shader.cpp  shader.hpp
hello_opengl/shader/: shader.cpp  simpleshader.frag  vertex.glsl
